Issue 68 - Bad spacing when graph not visible

--- a/public/less/site.less
+++ b/public/less/site.less
@@ -70,7 +70,7 @@
 }
 .dropdown-toggle {
 	margin-top:0;
-	margin-bottom:10px;
+	margin-bottom:5px;
 }
 .list-group {
 	li .list-group-item {
@@ -238,6 +238,9 @@
 	h2 {
 		word-wrap:break-word;
 	}
+	.h4 {
+		margin-bottom:22px;
+	}
 }
 .date {
 	margin-top:5px;
@@ -320,7 +323,7 @@ ul.date-links {
 	}
 
 	&.single-result {
-		margin-top:-55px;
+		margin-top:-52px;
 
 		.show-stats {
 			display:none;
